// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack Integration Tests path-and-whitelist-functions 1`] = `
".hello {
  color: red;
}

.whitelisted {
  color: green;
}

.whitelistedPattern {
  color: rebeccapurple;
}

md\\\\:w-2\\\\/3 {
  color: red;
}

"
`;

exports[`Webpack Integration Tests simple 1`] = `
".hello {
  color: red;
}

.whitelisted {
  color: green;
}

md\\\\:w-2\\\\/3 {
  color: red;
}

"
`;

exports[`Webpack Integration Tests simple-with-exclusion 1`] = `
".hello {
  color: red;
}

.unused {
  color: blue;
}

.whitelisted {
  color: green;
}

md\\\\:w-2\\\\/3 {
  color: red;
}

.legacy-unused-class {
  color: red;
}

.unused-too {
  color: blue;
}

.hello {
  color: red;
}

"
`;
